--- a/OldCarSounds/OldCarSounds.csproj
+++ b/OldCarSounds/OldCarSounds.csproj
@@ -44,27 +44,27 @@
     <Reference Include="cInput, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
       <HintPath>..\..\..\..\Apps\Games\My Summer Car\My.Summer.Car.v17.11.2020.2\mysummercar_Data\Managed\cInput.dll</HintPath>
     </Reference>
-    <Reference Include="ES2, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\..\..\..\Apps\Games\My Summer Car\My.Summer.Car.v17.11.2020.2\mysummercar_Data\Managed\ES2.dll</HintPath>
-    </Reference>
-    <Reference Include="Ionic.Zip, Version=1.9.1.5, Culture=neutral, PublicKeyToken=edbe51ad942a3f5c">
-      <HintPath>..\..\..\..\Apps\Games\My Summer Car\My.Summer.Car.v17.11.2020.2\mysummercar_Data\Managed\Ionic.Zip.dll</HintPath>
-    </Reference>
-    <Reference Include="MSCLoader, Version=1.0.8.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\..\..\Games\My.Summer.Car.v25.04.2021\mysummercar_Data\Managed\MSCLoader.dll</HintPath>
-    </Reference>
-    <Reference Include="MSCLoader.Features, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\..\..\Games\My.Summer.Car.v25.04.2021\mysummercar_Data\Managed\MSCLoader.Features.dll</HintPath>
-    </Reference>
-    <Reference Include="PlayMaker, Version=1.6.0.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\..\..\..\Apps\Games\My Summer Car\My.Summer.Car.v17.11.2020.2\mysummercar_Data\Managed\PlayMaker.dll</HintPath>
-    </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
+      <Reference Include="ES2, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
+          <HintPath>..\..\..\..\Apps\Games\My Summer Car\My.Summer.Car.v17.11.2020.2\mysummercar_Data\Managed\ES2.dll</HintPath>
+      </Reference>
+      <Reference Include="Ionic.Zip, Version=1.9.1.5, Culture=neutral, PublicKeyToken=edbe51ad942a3f5c">
+          <HintPath>..\..\..\..\Apps\Games\My Summer Car\My.Summer.Car.v17.11.2020.2\mysummercar_Data\Managed\Ionic.Zip.dll</HintPath>
+      </Reference>
+      <Reference Include="MSCLoader, Version=1.0.8.0, Culture=neutral, PublicKeyToken=null">
+          <HintPath>..\..\..\Games\My.Summer.Car.v25.04.2021\mysummercar_Data\Managed\MSCLoader.dll</HintPath>
+      </Reference>
+      <Reference Include="MSCLoader, Version=1.0.9.0, Culture=neutral, PublicKeyToken=null">
+          <HintPath>..\..\..\..\Apps\Games\My Summer Car\My.Summer.Car.v25.04.2021\My.Summer.Car.v25.04.2021\mysummercar_Data\Managed\MSCLoader.dll</HintPath>
+      </Reference>
+      <Reference Include="PlayMaker, Version=1.6.0.0, Culture=neutral, PublicKeyToken=null">
+          <HintPath>..\..\..\..\Apps\Games\My Summer Car\My.Summer.Car.v17.11.2020.2\mysummercar_Data\Managed\PlayMaker.dll</HintPath>
+      </Reference>
+      <Reference Include="System"/>
+      <Reference Include="System.Core"/>
+      <Reference Include="System.Xml.Linq"/>
+      <Reference Include="System.Data.DataSetExtensions"/>
+      <Reference Include="System.Data"/>
+      <Reference Include="System.Xml"/>
     <Reference Include="UnityEngine, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
       <HintPath>..\..\..\..\Apps\Games\My Summer Car\My.Summer.Car.v17.11.2020.2\mysummercar_Data\Managed\UnityEngine.dll</HintPath>
     </Reference>
@@ -75,8 +75,8 @@
   <ItemGroup>
     <Compile Include="OldCarSounds.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RadioCore.cs" />
     <Compile Include="Storage.cs" />
+      <Compile Include="Stuff\RadioCore.cs"/>
     <Compile Include="Stuff\RPMGauge.cs" />
     <Compile Include="Stuff\SatsumaOCS.cs" />
   </ItemGroup>
